--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -10,6 +10,6 @@ services:
       - "8080:8080"  # HLS and DASH
     volumes:
       - ../media:/media  
-      - ../nginx-config/nginx:/etc/nginx 
+      - ../nginx-config/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ../logs:/var/log/nginx
     restart: unless-stopped
