chore: nginx.conf edit

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,10 +29,27 @@ rtmp {
 }
 
 http {
-    sendfile off;
     aio on;
     directio 512;
     default_type application/octet-stream;
+    sendfile           on;
+    keepalive_timeout  65;
+
+    vod_mode                           local;
+    vod_metadata_cache                 metadata_cache 16m;
+    vod_response_cache                 response_cache 512m;
+    vod_last_modified_types            *;
+    vod_segment_duration               9000; #동영상을 9초 단위로 나눠서 전송
+    vod_align_segments_to_key_frames   on;
+    vod_dash_fragment_file_name_prefix "segment";
+    vod_hls_segment_file_name_prefix   "segment";
+
+    vod_manifest_segment_durations_mode accurate;
+
+    open_file_cache          max=1000 inactive=5m;
+    open_file_cache_valid    2m;
+    open_file_cache_min_uses 1;
+    open_file_cache_errors   on;
 
     server {
         listen      8080;
@@ -59,8 +76,13 @@ http {
                 application/vnd.apple.mpegurl m3u8;
                 video/mp2t ts;
             }
-            root /tmp;
+            vod hls;
+            # root /tmp;
+            root /media;
             add_header Cache-Control no-cache;
+            add_header Access-Control-Allow-Headers '*';
+            add_header Access-Control-Allow-Origin '*';
+            add_header Access-Control-Allow-Methods 'GET, HEAD, OPTIONS';
         }
 
         location /dash {
