--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -59,4 +59,9 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # export 1935 for rtmp, 8080 for hls or dash
 EXPOSE 1935 8080
 
+## 포트 범위 예시
+#EXPOSE 11935-12000
+## 기본 포트 예시
+#EXPOSE 80 443
+
 CMD ["nginx", "-g", "daemon off;"]
