--- a/nginx.conf
+++ b/nginx.conf
@@ -53,7 +53,12 @@ http {
 
     server {
         listen      8080;
-
+        ## ssl
+        #listen 443 ssl;
+        #server_name yourdomain.com;
+        #ssl_certificate /etc/nginx/ssl/your_certificate.crt;
+        #ssl_certificate_key /etc/nginx/ssl/your_private.key;
+        
         # This URL provides RTMP statistics in XML
         location /stat {
             rtmp_stat all;
@@ -91,4 +96,12 @@ http {
             add_header Cache-Control no-cache;
         }
     }
+    /**
+    server {
+        listen 80;
+        server_name yourdomain.com;
+    
+        return 301 https://$host$request_uri;
+    }
+    **/
 }
