--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -12,4 +12,5 @@ services:
       - ../media:/media  
       - ../nginx-config/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ../logs:/var/log/nginx
+      # - ../ssl:/etc/nginx/ssl ## ssl keyfile directory
     restart: unless-stopped
