add: certbot, letsencrypt.sh

--- a/nginx-config/nginx/nginx.conf
+++ b/nginx-config/nginx/nginx.conf
@@ -52,8 +52,15 @@ http {
     open_file_cache_errors   on;
 
     server {
-        listen      8080;
+        listen 80;
+        listen [::]:80;
 
+        server_name domain; # 등록한 도메인으로 변경
+
+        location /.well-known/acme-challenge {
+                allow all;
+                root /var/www/certbot;
+        } 
         # This URL provides RTMP statistics in XML
         location /stat {
             rtmp_stat all;
