--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,14 +1,28 @@
 services:
   nginx-media-server:
     image: hyeongjin0319/nginx-media-server:latest
-    container_name: nginx-media-server
+    container_name: ${PROJECT}
     platform: linux/amd64
     ports:
       - "1935:1935"  # RTMP
-      - "8080:8080"  # HLS and DASH
+      - "80:80"  # HLS and DASH
+      - "443:443"  # HTTPS
     volumes:
       - ../media:/media  
       - ../nginx-config/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ../logs:/var/log/nginx
+      - ../data/certbot/conf:/etc/letsencrypt
+      - ../data/certbot/www:/var/www/certbot
       # - ../ssl:/etc/nginx/ssl ## ssl keyfile directory
     restart: unless-stopped
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    restart: unless-stopped
+    volumes:
+      - ../logs:/var/log/letsencrypt
+      - ../data/certbot/conf:/etc/letsencrypt
+      - ../data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
